More documentation; support case in names; simplified config file.

--- a/etc/llmnr.conf
+++ b/etc/llmnr.conf
@@ -1,12 +1,8 @@
-# For each interface, specify a name, and which queries to respond to.
-# Upon receiving an A or AAAA query the server will check the interfaces
-# in the order they are listed here and return the address of the first
-# one which is up.  Typically ethernet interfaces will go first.
+# Specify a name for each interface that you want your LLMNR responder
+# to monitor.  If no name is specified, the name returned by uname -n
+# will be used.
 # 
 #[eth0]
-#name = mycomputer
-#querytypes = A AAAA PTR
+#name = mywired
 #[wlan0]
-#name = mycomputer
-#querytypes = A AAAA PTR
-
+#name = mywireless
