--- a/etc/init/llmnr.conf
+++ b/etc/init/llmnr.conf
@@ -5,4 +5,4 @@ description     "LLMNR responder"
 start on runlevel [2345]
 stop on runlevel [!2345]
 
-exec /usr/local/llmnr
+exec /usr/local/bin/llmnr
